[package]
name = "csafe"
version = "0.1.0"
edition = "2024"

[features]
tokio = ["dep:tokio"]

[dependencies]
memchr = "2"
log = "0.4"
tokio = { version = "1", optional = true, features = ["io-util"] }

[[example]]
name = "workout_read"
required-features = ["tokio"]

[dev-dependencies]
tokio-serial = "5"
anyhow = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
ratatui = "0.29"
crossterm = "0.28"
env_logger = "0.11"
